src/test/ui/parser/tag-variant-disr-non-nullary.stderr
error: custom discriminant values are not allowed in enums with fields
  --> $DIR/tag-variant-disr-non-nullary.rs:2:11
   |
LL |     Red = 0xff0000,
   |           ^^^^^^^^ invalid custom discriminant
LL |
LL |     Green = 0x00ff00,
   |             ^^^^^^^^ invalid custom discriminant
LL |     Blue = 0x0000ff,
   |            ^^^^^^^^ invalid custom discriminant
LL |     Black = 0x000000,
   |             ^^^^^^^^ invalid custom discriminant
LL |     White = 0xffffff,
   |             ^^^^^^^^ invalid custom discriminant
LL |     Other(usize),
   |     ------------ variant with a field defined here
LL |     Other2(usize, usize),
   |     -------------------- variant with fields defined here

error: aborting due to previous error

